cmake_minimum_required (VERSION 2.6)
set(CMAKE_BUILD_TYPE Debug)
project (Snake_Game)
add_executable(snake_game snake_game.cpp)
find_package(Curses REQUIRED)
find_package(Threads)
target_link_libraries( snake_game ${CURSES_LIBRARIES} )
target_link_libraries( snake_game ${CMAKE_THREAD_LIBS_INIT} )
include_directories(${CURSES_INCLUDE_DIR})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wno-long-long -pedantic")
